# bet365easy

./: .gitignore  manage.py  pyproject.toml
bet365easy/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  views.py
core/crawlers/: bet365.py  betano.py
core/management/commands/: count_members.py  send_tips.py
core/migrations/: 0001_initial.py  0002_user_is_active_user_is_staff_user_is_superuser.py  0003_user_groups_user_user_permissions.py  0004_session.py  0005_tip.py  0006_alter_session_options_alter_tip_options_and_more.py  0007_tip_bot.py  0008_tip_units.py  0009_alter_bot_dialog_id.py  0010_user_name_user_telegram_user_whatsapp.py  0011_user_payment_date_alter_user_is_active_and_more.py  0012_alter_user_name_alter_user_payment_date.py  0013_bot_members_qty_user_price.py  0014_tip_house_tip_link_alter_tip_bet.py  0015_tip_sum_odds.py  0016_alter_tip_bet.py  0017_tip_create_bet.py  0018_tip_content.py  0019_remove_tip_content_remove_tip_create_bet_and_more.py  0020_remove_tip_print.py  0021_bot_send_image_bot_send_text.py  0022_remove_bot_send_image_remove_bot_send_text_and_more.py  0023_bot_unit_text.py
core/templates/: index.html
static/: v0.1.css  v0.1.js  v0.1_original.js
static/site/assets/css/: theme-rtl.min.css  theme.css  theme.min.css
