[tool.poetry]
name = "bet365easy"
version = "0.1.0"
description = ""
authors = ["Juliano Amaral Gouveia <julianoamg.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
django-model-utils = "^4.3.1"
django-cors-headers = "^3.14.0"
selectolax = "^0.3.12"
python-telegram-bot = "^20.1"
django-extensions = "^3.2.1"
django-environ = "^0.10.0"
whitenoise = "^6.4.0"
django-admin-interface = "^0.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
